# ml-deployment-examples

./: README.md  pyproject.toml
mnist/: client.sh  model.py  serve.py  serve.sh  train.py
mnist-triton/: .gitignore  Dockerfile  Makefile  README.md  requirements.txt  serve.py  train.py
mnist-triton/.devcontainer/: devcontainer.json
mnist-triton/ssl/: cert.pem  key.pem
mnist-triton/static/: index.html
mnist/.devcontainer/: devcontainer.json
mnist/model_repository/mnist/: config.pbtxt
