[tool.poetry]
name = "ml-deployment-examples"
version = "0.1.0"
description = ""
authors = ["Rasmus Larsen <rasmus.larsen@alexandra.dk>"]
readme = "README.md"
packages = [{include = "ml_deployment_examples"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
